other-cel/restrict-edit-for-endpoints/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-edit-for-endpoints
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
